Multiple changes including animations and design improvements, better functionality and more.

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "Electron-based client for an unfinished modern and minimalistic cloud notes app.",
   "main": "src/index.js",
+  "type": "module",
   "scripts": {
     "start": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -24,6 +25,7 @@
     "globals": "^15.9.0"
   },
   "dependencies": {
-    "color-string": "^1.9.1"
+    "color-string": "^1.9.1",
+    "electron-store": "^10.0.0"
   }
 }
