--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "globals": "^15.9.0"
   },
   "dependencies": {
+    "cheerio": "^1.0.0",
     "color-string": "^1.9.1",
     "electron-store": "^10.0.0"
   }
